añadir conclusiones mariana y erik hecho

--- a/Practica1Reporte/Conclusiones.tex
+++ b/Practica1Reporte/Conclusiones.tex
@@ -5,7 +5,9 @@
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur purus ut faucibus pulvinar elementum integer. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. In fermentum et sollicitudin ac. Magna ac placerat vestibulum lectus mauris. Semper quis lectus nulla at volutpat diam ut. Gravida arcu ac tortor dignissim convallis aenean et tortor at. Integer eget aliquet nibh praesent tristique magna. Sed velit dignissim sodales ut eu sem integer vitae justo. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam.
 	\subsection{Conclusiones Jos\'e \'Angel Rojas Cruz}
 	Ultricies mi quis hendrerit dolor magna eget est lorem ipsum. Velit egestas dui id ornare arcu odio. Neque sodales ut etiam sit amet nisl purus in mollis. Nec ultrices dui sapien eget mi proin sed libero enim. Sit amet risus nullam eget felis eget nunc lobortis. Velit dignissim sodales ut eu sem. Lorem donec massa sapien faucibus et molestie. Quis varius quam quisque id diam vel quam elementum pulvinar. Netus et malesuada fames ac turpis. Posuere sollicitudin aliquam ultrices sagittis orci a. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Et malesuada fames ac turpis egestas maecenas.
-	\subsection{Conclusiones Erik Alcantara Covarrubias (revisar)}
-	Elementum integer enim neque volutpat. Congue nisi vitae suscipit tellus mauris a diam maecenas. Neque egestas congue quisque egestas diam in arcu cursus euismod. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse. Tincidunt vitae semper quis lectus nulla at. Vitae et leo duis ut diam. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Tortor consequat id porta nibh venenatis cras sed felis eget. Sit amet consectetur adipiscing elit pellentesque habitant morbi tristique. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Dui ut ornare lectus sit amet est placerat in. Dignissim sodales ut eu sem. Tincidunt eget nullam non nisi est sit amet facilisis magna. Tortor vitae purus faucibus ornare suspendisse sed nisi.
+	\subsection{Conclusiones Erik Alcantara Covarrubias }
+Gracias a esta practica nos dimos cuenta de la gran importancia de el uso de los diferentes componentes de una CPU, la unidad de control, los multiplexores, y la ALU fueron muy complicados de realizar, pero gracias a ellos pudimos hacer operaciones matematicas y lograr decisiones en base a datos obtenidos de forma automatica
 	\subsection{Conclusiones Mariana Alquisira (revisar)}
-	Congue nisi vitae suscipit tellus mauris a. Hendrerit dolor magna eget est lorem ipsum dolor sit amet. Tortor at risus viverra adipiscing at. Diam maecenas ultricies mi eget mauris pharetra. Sed enim ut sem viverra aliquet eget sit amet tellus. Egestas fringilla phasellus faucibus scelerisque eleifend. Laoreet suspendisse interdum consectetur libero. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Quis commodo odio aenean sed adipiscing. Consectetur adipiscing elit ut aliquam. Odio morbi quis commodo odio aenean. Morbi tincidunt augue interdum velit euismod in pellentesque massa. Sit amet purus gravida quis. Tempor commodo ullamcorper a lacus.
+	El desarrollo de esta pr\'actica nos sirvi\'o para recordar algunos conceptos manejados en la anterior materia, al igual que poner en pr\'actica conocimientos que adquirimos en las clases, como el entendimiento de las partes de la computadora y que parte tiene control de qu\'e.
+Con respecto a la programaci\'on, la parte que m\'as se nos complico fue la parte aritm\'etica, ya que nos percatamos que al ponerlo en marcha, obten\'iamos resultados err\'oneos cuando las cifras eran iguales. La parte l\'ogica fue m\'as sencilla ya que \'unicamente para el complemento 1, obtenemos la negaci\'on, para el complemento 2 usamos la misma negaci\'on del complemento 1 y le sumamos uno, por ultimo las operaciones AND y OR. Y por parte de las operaciones Shifters fue un tanto complicado pero no present\'o m\'as inconvenientes y la parte con m\'as trabajo fue la parte del display.
+Al final el circuito pudo cumplir el objetivo de la pr\'actica, el cual implicaba la elaboraci\'on de una ALU en la cual se pueden hacer operaciones aritm\'eticas, l\'ogicas y Shifters, con datos obtenidos de forma aleatoria.
