--- a/Practica1Reporte/Portada.tex
+++ b/Practica1Reporte/Portada.tex
@@ -21,7 +21,7 @@
 		{\Large Autores: \par}
 		{\Large Hern\'andez Vergara, Eduardo \par}
 		{\Large Rojas Cruz, Jos\'e \'Angel \par}
-		{\Large Alcantara Covarrubias Erik (revisar) \par}
+		{\Large Alcantara Covarrubias Erik \par}
 		{\Large Mariana Alquisira (revisar) \par}
 		\vfill
 		{\Large Profesor: \par}
