--- a/Practica1Reporte/Conclusiones.tex
+++ b/Practica1Reporte/Conclusiones.tex
@@ -1,6 +1,6 @@
 \section{Conclusiones}
 	\subsection{Conclusiones Generales}
-	Eget lorem dolor sed viverra ipsum nunc. Ipsum dolor sit amet consectetur. Ipsum dolor sit amet consectetur adipiscing elit. Est ultricies integer quis auctor elit sed vulputate mi sit. Sit amet venenatis urna cursus eget. Morbi quis commodo odio aenean sed adipiscing. In dictum non consectetur a erat. Eu lobortis elementum nibh tellus molestie nunc non blandit massa. Neque ornare aenean euismod elementum nisi quis eleifend. Nisl suscipit adipiscing bibendum est ultricies integer quis. Sodales neque sodales ut etiam sit amet nisl purus in.
+	El circuito presentado en la practica fue elaborado deacuerdo a los requerimientos solicitados, se trabajo de forma eficiente en la implementacion de las operaciones que se tenian que realizar ademas de ir aplicando diversos conceptos teoricos sobre las partes de un computador; ademas del uso de las matematicas para la elaboracion de un algoritmo que permitiece obtener los resultados esperados a partir de ciertas entradas de datos. Con esto podemos observar la importancia de los ALU como parte fundamental de los procesadores que se utilizan actualmente y por ello como futuros ingenieros debemos conocer su aplicacion tanto teorica como practica dando un enfoque hacia la problematica que buscamos resolver
 	\subsection{Conclusiones Eduardo Hern\'andez Vergara}
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur purus ut faucibus pulvinar elementum integer. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. In fermentum et sollicitudin ac. Magna ac placerat vestibulum lectus mauris. Semper quis lectus nulla at volutpat diam ut. Gravida arcu ac tortor dignissim convallis aenean et tortor at. Integer eget aliquet nibh praesent tristique magna. Sed velit dignissim sodales ut eu sem integer vitae justo. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam.
 	\subsection{Conclusiones Jos\'e \'Angel Rojas Cruz}
