--- a/Practica1Reporte/Conclusiones.tex
+++ b/Practica1Reporte/Conclusiones.tex
@@ -2,12 +2,12 @@
 	\subsection{Conclusiones Generales}
 	El circuito presentado en la practica fue elaborado deacuerdo a los requerimientos solicitados, se trabajo de forma eficiente en la implementacion de las operaciones que se tenian que realizar ademas de ir aplicando diversos conceptos teoricos sobre las partes de un computador; ademas del uso de las matematicas para la elaboracion de un algoritmo que permitiece obtener los resultados esperados a partir de ciertas entradas de datos. Con esto podemos observar la importancia de los ALU como parte fundamental de los procesadores que se utilizan actualmente y por ello como futuros ingenieros debemos conocer su aplicacion tanto teorica como practica dando un enfoque hacia la problematica que buscamos resolver
 	\subsection{Conclusiones Eduardo Hern\'andez Vergara}
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur purus ut faucibus pulvinar elementum integer. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. In fermentum et sollicitudin ac. Magna ac placerat vestibulum lectus mauris. Semper quis lectus nulla at volutpat diam ut. Gravida arcu ac tortor dignissim convallis aenean et tortor at. Integer eget aliquet nibh praesent tristique magna. Sed velit dignissim sodales ut eu sem integer vitae justo. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim diam.
+		En el desarrollo de la pr\'actica pudimos aprender/recordar algunos de los elementos m\'as b\'asicos de la programaci\'on en VHDL, esto con el objetivo de desarrollar nuestra ALU b\'asica/intermedia, en lo personal hubo cosas complicadas al momento de intentar implementarlas a VHDL y programarlo en la FPGA, como fue el caso de la ventana deslizante, y la unidad aritmetica, la ventana deslizante fue especialmente retadora por los ciclos de reloj, ya que fue complicado sincronizar procesos adecuadamente para que saliera la ventana deslizante, mientras que la unidad Aritmetica simplemente no salia, en cuanto a las opciones de shifters y las operaci\'ones l\'ogicas fueron relativamente sencillas, en el caso de los Shifters el unico problema era hacer que ciclara solo, mientras que las operaciones l\'ogicas no fueron desafio alguno. Sin embargo estos obstaculos fueron superados para finalmente dar soluci\'on a la pr\'actica.
 	\subsection{Conclusiones Jos\'e \'Angel Rojas Cruz}
 	Ultricies mi quis hendrerit dolor magna eget est lorem ipsum. Velit egestas dui id ornare arcu odio. Neque sodales ut etiam sit amet nisl purus in mollis. Nec ultrices dui sapien eget mi proin sed libero enim. Sit amet risus nullam eget felis eget nunc lobortis. Velit dignissim sodales ut eu sem. Lorem donec massa sapien faucibus et molestie. Quis varius quam quisque id diam vel quam elementum pulvinar. Netus et malesuada fames ac turpis. Posuere sollicitudin aliquam ultrices sagittis orci a. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Et malesuada fames ac turpis egestas maecenas.
 	\subsection{Conclusiones Erik Alcantara Covarrubias }
 Gracias a esta practica nos dimos cuenta de la gran importancia de el uso de los diferentes componentes de una CPU, la unidad de control, los multiplexores, y la ALU fueron muy complicados de realizar, pero gracias a ellos pudimos hacer operaciones matematicas y lograr decisiones en base a datos obtenidos de forma automatica
-	\subsection{Conclusiones Mariana Alquisira (revisar)}
+	\subsection{Conclusiones Mariana Mart\'inez Alquicira}
 	El desarrollo de esta pr\'actica nos sirvi\'o para recordar algunos conceptos manejados en la anterior materia, al igual que poner en pr\'actica conocimientos que adquirimos en las clases, como el entendimiento de las partes de la computadora y que parte tiene control de qu\'e.
 Con respecto a la programaci\'on, la parte que m\'as se nos complico fue la parte aritm\'etica, ya que nos percatamos que al ponerlo en marcha, obten\'iamos resultados err\'oneos cuando las cifras eran iguales. La parte l\'ogica fue m\'as sencilla ya que \'unicamente para el complemento 1, obtenemos la negaci\'on, para el complemento 2 usamos la misma negaci\'on del complemento 1 y le sumamos uno, por ultimo las operaciones AND y OR. Y por parte de las operaciones Shifters fue un tanto complicado pero no present\'o m\'as inconvenientes y la parte con m\'as trabajo fue la parte del display.
 Al final el circuito pudo cumplir el objetivo de la pr\'actica, el cual implicaba la elaboraci\'on de una ALU en la cual se pueden hacer operaciones aritm\'eticas, l\'ogicas y Shifters, con datos obtenidos de forma aleatoria.
