--- a/Practica1Reporte/Portada.tex
+++ b/Practica1Reporte/Portada.tex
@@ -21,8 +21,8 @@
 		{\Large Autores: \par}
 		{\Large Hern\'andez Vergara, Eduardo \par}
 		{\Large Rojas Cruz, Jos\'e \'Angel \par}
-		{\Large Alcantara Covarrubias Erik \par}
-		{\Large Mariana Alquisira (revisar) \par}
+		{\Large Alcantara Covarrubias, Erik \par}
+		{\Large Mart\'inez Alquicira, Mariana \par}
 		\vfill
 		{\Large Profesor: \par}
 		{\Large Pastrana Fern\'andez Carlos Jes\'us \par}
