--- a/Practica1Reporte/Conclusiones.tex
+++ b/Practica1Reporte/Conclusiones.tex
@@ -4,7 +4,7 @@
 	\subsection{Conclusiones Eduardo Hern\'andez Vergara}
 		En el desarrollo de la pr\'actica pudimos aprender/recordar algunos de los elementos m\'as b\'asicos de la programaci\'on en VHDL, esto con el objetivo de desarrollar nuestra ALU b\'asica/intermedia, en lo personal hubo cosas complicadas al momento de intentar implementarlas a VHDL y programarlo en la FPGA, como fue el caso de la ventana deslizante, y la unidad aritmetica, la ventana deslizante fue especialmente retadora por los ciclos de reloj, ya que fue complicado sincronizar procesos adecuadamente para que saliera la ventana deslizante, mientras que la unidad Aritmetica simplemente no salia, en cuanto a las opciones de shifters y las operaci\'ones l\'ogicas fueron relativamente sencillas, en el caso de los Shifters el unico problema era hacer que ciclara solo, mientras que las operaciones l\'ogicas no fueron desafio alguno. Sin embargo estos obstaculos fueron superados para finalmente dar soluci\'on a la pr\'actica.
 	\subsection{Conclusiones Jos\'e \'Angel Rojas Cruz}
-	Ultricies mi quis hendrerit dolor magna eget est lorem ipsum. Velit egestas dui id ornare arcu odio. Neque sodales ut etiam sit amet nisl purus in mollis. Nec ultrices dui sapien eget mi proin sed libero enim. Sit amet risus nullam eget felis eget nunc lobortis. Velit dignissim sodales ut eu sem. Lorem donec massa sapien faucibus et molestie. Quis varius quam quisque id diam vel quam elementum pulvinar. Netus et malesuada fames ac turpis. Posuere sollicitudin aliquam ultrices sagittis orci a. Scelerisque felis imperdiet proin fermentum leo vel orci porta. Et malesuada fames ac turpis egestas maecenas.
+	En el desarrollo de la pr\'actica, me di cuenta de la importancia que tiene conocer a fondo el funcionamiento de los componentes que forman parte de la unidad aritm\'etica de la CPU, debido a que era importante conocerlo para saber c\'omo es que se manejar\'ian los distintos componentes de la ALU y las salidas esperadas de cada uno de ellos, para as\'i poder replicarlos en VHDL con la ayuda de la FPGA. Lo anterior se logr\'o comprender al unir todos los elementos de la ALU en uno solo, desde la unidad aritm\'etico-l\'ogica hasta las operaciones de barrel shifters, teniendo en cuenta que en algunos casos ten\'ian distintas formas de presentar las salidas, por lo que se deb\'ia de entender c\'omo lograr hacer este cambio y aplicarlo correctamente. Por \'ultimo, la implementaci\'on de la ventana deslizante represento un reto por lo menos l\'ogico debido a que se tuvieron que usar algunas herramientas que no se hab\'ian utilizado antes en programas desarrollados anteriormente, como consultar una memoria ROM y aplicar distintos eventos con solo una frecuencia de reloj. Creo que esta pr\'actica hace que me d\'e cuenta de que necesito un estudio m\'as profundo de las herramientas que nos brinda el lenguaje VHDL para poder facilitar y en algunos casos solucionar, problemas que se me presenten m\'as adelante.
 	\subsection{Conclusiones Erik Alcantara Covarrubias }
 Gracias a esta practica nos dimos cuenta de la gran importancia de el uso de los diferentes componentes de una CPU, la unidad de control, los multiplexores, y la ALU fueron muy complicados de realizar, pero gracias a ellos pudimos hacer operaciones matematicas y lograr decisiones en base a datos obtenidos de forma automatica
 	\subsection{Conclusiones Mariana Mart\'inez Alquicira}
