--- a/Practica1Reporte/Conclusiones.tex
+++ b/Practica1Reporte/Conclusiones.tex
@@ -1,6 +1,6 @@
 \section{Conclusiones}
 	\subsection{Conclusiones Generales}
-	El circuito presentado en la practica fue elaborado deacuerdo a los requerimientos solicitados, se trabajo de forma eficiente en la implementacion de las operaciones que se tenian que realizar ademas de ir aplicando diversos conceptos teoricos sobre las partes de un computador; ademas del uso de las matematicas para la elaboracion de un algoritmo que permitiece obtener los resultados esperados a partir de ciertas entradas de datos. Con esto podemos observar la importancia de los ALU como parte fundamental de los procesadores que se utilizan actualmente y por ello como futuros ingenieros debemos conocer su aplicacion tanto teorica como practica dando un enfoque hacia la problematica que buscamos resolver
+	El circuito presentado en la practica fue elaborado deacuerdo a los requerimientos solicitados, se trabajo de forma eficiente en la implementacion de las operaciones que se tenian que realizar ademas de ir aplicando diversos conceptos teoricos sobre las partes de un computador; ademas del uso de las matematicas para la elaboracion de un algoritmo que permitiece obtener los resultados esperados a partir de ciertas entradas de datos. Con esto podemos observar la importancia de los ALU como parte fundamental de los procesadores que se utilizan actualmente y por ello como futuros ingenieros debemos conocer su aplicacion tanto teorica como practica dando un enfoque hacia la problematica que buscamos resolver. Y al final podemos decir que: es poco, pero es trabajo honesto.
 	\subsection{Conclusiones Eduardo Hern\'andez Vergara}
 		En el desarrollo de la pr\'actica pudimos aprender/recordar algunos de los elementos m\'as b\'asicos de la programaci\'on en VHDL, esto con el objetivo de desarrollar nuestra ALU b\'asica/intermedia, en lo personal hubo cosas complicadas al momento de intentar implementarlas a VHDL y programarlo en la FPGA, como fue el caso de la ventana deslizante, y la unidad aritmetica, la ventana deslizante fue especialmente retadora por los ciclos de reloj, ya que fue complicado sincronizar procesos adecuadamente para que saliera la ventana deslizante, mientras que la unidad Aritmetica simplemente no salia, en cuanto a las opciones de shifters y las operaci\'ones l\'ogicas fueron relativamente sencillas, en el caso de los Shifters el unico problema era hacer que ciclara solo, mientras que las operaciones l\'ogicas no fueron desafio alguno. Sin embargo estos obstaculos fueron superados para finalmente dar soluci\'on a la pr\'actica.
 	\subsection{Conclusiones Jos\'e \'Angel Rojas Cruz}
